<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/imagen_de_fondo"
        android:scaleType="fitXY"
        android:src="@mipmap/fondo_minion" />

    <TextView
        android:id="@+id/tituloSplash"
        android:layout_marginTop="20dp"
        android:text="@string/mis_tareas"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="52sp"
        style="@style/etiquetas"/>

    <LinearLayout
        android:id="@+id/cajaBlanca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tituloSplash"
        android:background="@android:color/white"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="12dp"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:textSize="17sp" />

            <requestFocus />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usuario">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/botonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/cajaBlanca"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/boton"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:onClick="accederApp"/>

    <TextView
        android:id="@+id/cuentaNueva"
        android:layout_marginTop="15dp"
        android:text="@string/crear_cuenta_nueva"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_below="@id/botonLogin"
        android:textStyle="bold"
        style="@style/etiquetas"
        android:onClick="crearCuenta"/>

</RelativeLayout>